tests/paczka1/fuzzy1/40043590.err
Error in line 2: YutWtY4rK A790 8,6
Error in line 16: hqVH2Tgk A189 71,8
Error in line 23: S231 S231 78,8
Error in line 32: 3QfSP A189 0,4
Error in line 33: YutWtY4rK A790 37,2
Error in line 35: 3QfSP S231 15,8
